# wormhole-svm-utils

./: Cargo.toml  README.md
crates/wormhole-svm-cli/: Cargo.toml
crates/wormhole-svm-cli/src/: main.rs
crates/wormhole-svm-submit/: Cargo.toml
crates/wormhole-svm-submit/src/: connection.rs  execute.rs  lib.rs  resolve.rs  signatures.rs
crates/wormhole-svm-test/: Cargo.toml
crates/wormhole-svm-test/src/: litesvm.rs  resolver.rs  vaa.rs
crates/wormhole-svm-test/tests/: emit_message_example.rs  verify_vaa_example.rs
programs/message-emitter-example/: Cargo.toml
programs/message-emitter-example/src/: lib.rs
programs/vaa-verifier-example/: Cargo.toml
programs/vaa-verifier-example/src/: lib.rs
src/: litesvm.rs
