[workspace]
members = [
    "crates/wormhole-svm-test",
    "crates/wormhole-svm-submit",
    "crates/wormhole-svm-cli",
    "programs/vaa-verifier-example",
    "programs/message-emitter-example",
]
resolver = "2"

[workspace.dependencies]
libsecp256k1 = "0.7"
sha3 = "0.10"
hex = "0.4"
thiserror = "1.0"
base64 = "0.22"
litesvm = "0.7"
solana-sdk = "2.3"
solana-client = "2.3"
solana-program = "2.3"
wormhole-raw-vaas = "0.3.0"
wormhole-svm-definitions = { git = "https://github.com/wormhole-foundation/wormhole", features = ["verify-vaa-shim"] }
wormhole-svm-shim = { git = "https://github.com/wormhole-foundation/wormhole" }
wormhole-svm-submit = { path = "crates/wormhole-svm-submit", default-features = false }
# TODO: pin
executor-account-resolver-svm = { git = "https://github.com/wormholelabs-xyz/executor-account-resolver-svm" }
