[package]
name = "message-emitter-example"
version = "0.1.0"
edition = "2021"
description = "Minimal example program demonstrating Wormhole message emission via Post Message Shim"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []

[dependencies]
solana-program = { workspace = true }
wormhole-svm-definitions = { workspace = true, features = ["post-message-shim"] }
wormhole-svm-shim = { workspace = true }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values("custom-heap", "custom-panic"))',
    'cfg(target_os, values("solana"))',
]
